--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ form {
 .hint {
   line-height: 1.5;
   margin-top: 5px;
-  opacity: 0.6;
+  opacity: 0.8;
   font-size: 12px;
 }
 
@@ -48,7 +48,7 @@ form {
   border: 1px solid rgba(39, 33, 66, 0.8);
   width: 80%;
   font-size: 16px;
-  border-radius: 30px;
+  border-radius: 20px;
   line-height: 20px;
   color: #272044;
 }
@@ -56,13 +56,14 @@ form {
 .submit-button {
   margin-left: 10px;
   background: #ffe241;
-  color: black;
-  border: none;
-  width: 120px;
+  font-weight: 600;
+  color: white;
+
+  width: 150px;
   font-size: 16px;
   border-radius: 30px;
-  padding: 14px 24px;
-  border: 1px solid rgba(39, 33, 66, 0.8);
+  padding: 12px 24px;
+  border: 1px solid rgba(39, 33, 66, 0.4);
 }
 
 .poem {
